Added card listings view

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Pokemon Poverty</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block body %}
 	<table>
 		<tr>
 			<th>Card Set</th>
@@ -21,10 +16,9 @@
 				<td>{{ card.card_expansion }}</td>
 				<td>{{ card.card_number }}</td>
 				<td>{{ card.card_class }}</td>
-				<td>{{ card.card_name }}</td>
+				<td><a href="/{{ card.card_expansion }}/{{ card.card_number }}/{{ card.card_class }}">{{ card.card_name }}</a></td>
 				<td>£{{ "{:.2}"|format(card.price) }}</td>
 			</tr>
 		{% endfor %}
 	</table>
-</body>
-</html>
+{% endblock %}
